--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,54 +2,56 @@
  * Site header
  */
 .site-header {
-  position: relative;
-  width: 100%;
+  border-top: 5px solid $grey-color-dark;
+  border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
-  line-height: $base-line-height * $base-font-size * 2.25;
-  background-color: $background-color;
-  border-top: 5px solid $border-color-03;
-  border-bottom: 1px solid $border-color-01;
+
+  // Positioning context for the mobile navigation icon
+  position: relative;
 }
 
 .site-title {
   @include relative-font-size(1.625);
-  font-weight: 300;
+  font-weight: 400;
+  line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
 
-  @include media-query($on-palm) {
-    padding-right: 45px;
-  }
-
   &,
   &:visited {
-    color: $site-title-color;
+    color: $text-color;
   }
 }
 
 .site-nav {
   float: right;
-  border: none;
-  background-color: inherit;
+  line-height: $base-line-height * $base-font-size * 2.25;
 
-  label[for="nav-trigger"], #nav-trigger {
+  .nav-trigger {
+      display: none;
+  }
+
+  .menu-icon {
     display: none;
   }
 
-  .nav-item {
+  .page-link {
     color: $text-color;
+    line-height: $base-line-height;
+
+    // Gaps between nav items, but not on the last one
     &:not(:last-child) {
-      margin-right: $spacing-unit * 0.5;
+      margin-right: 20px;
     }
   }
 
-  @include media-query($on-medium) {
+  @include media-query($on-palm) {
     position: absolute;
     top: 9px;
-    right: $spacing-unit * 0.6;
+    right: $spacing-unit * 0.5;
     background-color: $background-color;
-    border: 1px solid $border-color-01;
+    border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
 
@@ -58,82 +60,58 @@
       float: right;
       width: 36px;
       height: 36px;
+      z-index: 2;
       cursor: pointer;
     }
 
     .menu-icon {
+      display: block;
       float: right;
       width: 36px;
       height: 26px;
       line-height: 0;
-      padding-top: 18px;
+      padding-top: 10px;
       text-align: center;
 
-      &::before {
-        font-family: "Font Awesome 6 Free";
-        font-weight: 900;
-      }
-
-      > svg path {
-        fill: $border-color-03;
+      > svg {
+        fill: $grey-color-dark;
       }
     }
 
-    #nav-trigger {
-      ~ label[for=nav-trigger] .menu-icon {
-        &::before {
-          content: "\f0c9";
-          font-size: 1.25em;
-        }
-      }
-      ~ .nav-items {
-        clear: both;
-        display: none
-      }
-      &:checked {
-      ~ label[for=nav-trigger] .menu-icon {
-        &::before {
-          content: "\f00d";
-          font-size: 1.5em;
-        }
-      }
-        ~ .nav-items {
-          display: block;
-          padding-bottom: 5px;
-          .nav-item {
-            margin-left: 20px;
-            padding: 5px 10px;
-          }
-        }
-      }
+    input ~ .trigger {
+      clear: both;
+      display: none;
     }
 
-    .nav-item {
+    input:checked ~ .trigger {
       display: block;
-      padding: 5px 0;
-      color: $text-color;
-      line-height: $base-line-height;
+      padding-bottom: 5px;
+    }
+
+    .page-link {
+      display: block;
+      margin-left: 20px;
+      padding: 5px 10px;
+
+      &:not(:last-child) {
+        margin-right: 0;
+      }
     }
   }
 }
-
-
 
 /**
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid $border-color-01;
+  border-top: 1px solid $grey-color-light;
   padding: $spacing-unit 0;
+  text-align: left;
 }
 
 .footer-heading {
   @include relative-font-size(1.125);
-  margin-bottom: $spacing-unit * .5;
-}
-
-.feed-subscribe .svg-icon {
-  padding: 5px 5px 2px 0
+  margin-bottom: $spacing-unit * 0.5;
 }
 
 .contact-list,
@@ -142,68 +120,61 @@
   margin-left: 0;
 }
 
-.footer-col-wrapper,
-.social-links {
+.footer-col-wrapper {
   @include relative-font-size(0.9375);
-  color: $brand-color-dimmed;
+  color: $grey-color;
+  margin-left: -$spacing-unit * 0.5;
+  @extend %clearfix;
 }
 
 .footer-col {
-  margin-bottom: $spacing-unit * .5;
+  float: left;
+  margin-bottom: $spacing-unit * 0.5;
+  padding-left: $spacing-unit * 0.5;
 }
 
-.footer-col-1,
+.footer-col-1 {
+  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
+  width:         calc(35% - (#{$spacing-unit} / 2));
+}
+
 .footer-col-2 {
-  width: calc(50% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
+  width:         calc(20% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
-  width: calc(100% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
+  width:         calc(45% - (#{$spacing-unit} / 2));
 }
 
-@media screen and (min-width: $on-large) {
-  .footer-col-1 {
-    width: calc(35% - (#{$spacing-unit} / 2));
-  }
-
+@include media-query($on-laptop) {
+  .footer-col-1,
   .footer-col-2 {
-    width: calc(20% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+    width:         calc(50% - (#{$spacing-unit} / 2));
   }
 
   .footer-col-3 {
-    width: calc(45% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+    width:         calc(100% - (#{$spacing-unit} / 2));
   }
 }
 
-@media screen and (min-width: $on-medium) {
-  .footer-col-wrapper {
-    display: flex
-  }
-
+@include media-query($on-palm) {
   .footer-col {
-    width: calc(100% - (#{$spacing-unit} / 2));
-    padding: 0 ($spacing-unit * .5);
-
-    &:first-child {
-      padding-right: $spacing-unit * .5;
-      padding-left: 0;
-    }
-
-    &:last-child {
-      padding-right: 0;
-      padding-left: $spacing-unit * .5;
-    }
+    float: none;
+    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+    width:         calc(100% - (#{$spacing-unit} / 2));
   }
 }
-
-
 
 /**
  * Page content
  */
 .page-content {
   padding: $spacing-unit 0;
-  flex: 1 0 auto;
+  flex: 1;
 }
 
 .page-heading {
@@ -217,201 +188,162 @@
 .post-list {
   margin-left: 0;
   list-style: none;
-
+  
   > li {
-    margin-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit * 0.25; // Adjust this value to reduce the spacing
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
+
+  a {
+    flex-grow: 1;
+    margin-right: $spacing-unit * 0.5;
+  }
+
+  span {
+    white-space: nowrap;
+  }
+}
+
+ul {
+  margin-left: 0;
+  list-style: none;
 }
 
 .post-meta {
   font-size: $small-font-size;
-  color: $brand-color-dimmed;
+  color: $grey-color;
 }
 
 .post-link {
-  display: block;
+  display: inline; // Ensure the link is inline
   @include relative-font-size(1.5);
+  margin-bottom: 5px; // Adjust this value to reduce the spacing
 }
 
+.post-title {
+  display: flex; // Ensure the title and hash are on the same line
+  align-items: center;
+}
 
+.hash {
+  margin-right: 5px; // Adjust spacing between hash and title
+}
+
+.post-tags {
+  margin-top: 5px; // Adjust this value to reduce the spacing
+}
 
 /**
  * Posts
  */
 .post-header {
   margin-bottom: $spacing-unit;
-  padding-bottom: 18px;
-  text-align: center;
-  border-bottom: 1px solid $border-color-01;
 }
 
-.post-meta {
-  .bullet-divider { padding-inline: 15px }
-  .meta-label { font-weight: 600 }
-
-  .force-inline {
-    display: inline;
-    &::before {
-      content: "•";
-      padding-inline: 5px;
-    }
-  }
-  .post-authors { margin-top: 3px }
-}
-
-.post-title,
-.post-content h1 {
-  margin-bottom: 10px;
+.post-title {
   @include relative-font-size(2.625);
-  font-weight: $base-font-weight;
   letter-spacing: -1px;
-  line-height: 1.15;
+  line-height: 1;
+  text-align: left;
 
-  @media screen and (min-width: $on-large) {
-    @include relative-font-size(2.625);
+  @include media-query($on-laptop) {
+    @include relative-font-size(2.25);
   }
+}
+
+.home .post-title {
+  @include relative-font-size(2);
+  text-align: left;
 }
 
 .post-content {
   margin-bottom: $spacing-unit;
+  text-align: justify;
 
-  h1, h2, h3, h4, h5, h6 { margin-top: $spacing-unit }
+  p {
+    text-align: justify;
+  }
 
   h2 {
-    @include relative-font-size(1.75);
+    @include relative-font-size(2);
 
-    @media screen and (min-width: $on-large) {
-      @include relative-font-size(2);
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.75);
     }
   }
 
   h3 {
-    @include relative-font-size(1.375);
+    @include relative-font-size(1.625);
 
-    @media screen and (min-width: $on-large) {
-      @include relative-font-size(1.625);
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.375);
     }
   }
 
   h4 {
     @include relative-font-size(1.25);
+
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.125);
+    }
   }
 
-  h5 {
-    @include relative-font-size(1.125);
+  ul, ol {
+    margin-left: $spacing-unit;
+    list-style-position: outside;
+    list-style-type: disc; // Explicitly set bullet point style
   }
-  h6 {
-    @include relative-font-size(1.0625);
+
+  ol {
+    list-style-type: decimal; // Explicitly set number style for ordered lists
+  }
+
+  li {
+    margin-bottom: $spacing-unit * 0.25; // Adjust this value to reduce the spacing
+    > ul,
+    > ol {
+      margin-bottom: 0;
+      margin-top: $spacing-unit * 0.25; // Add spacing above nested lists
+    }
   }
 }
 
-.comments-disabled-message {
+.post-navigation {
+  margin-top: $spacing-unit;
+  padding-top: $spacing-unit;
+  border-top: 1px solid $grey-color-light;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.nav-previous, .nav-next {
+  font-size: $small-font-size;
+}
+
+.nav-previous a, .nav-next a {
+  color: $brand-color;
+  text-decoration: none;
+}
+
+.nav-previous a:hover, .nav-next a:hover {
+  text-decoration: underline;
+}
+
+/**
+ * Simplified quote
+ */
+.quote {
+  color: $grey-color;
   text-align: center;
-  font-weight: 300;
+  margin: $spacing-unit 0;
+  font-style: italic;
 }
 
-.social-media-list {
-  display: table;
-  margin: 0 auto;
-  li {
-    float: left;
-    min-width: 45px;
-    min-height: 45px;
-    text-align: center;
-    margin: 5px 10px 5px 0;
-    &:last-of-type { margin-right: 0 }
-    a {
-      display: block;
-      padding: 10px 12px;
-      border: 1px solid $border-color-01;
-      &:hover { border-color: $border-color-02 }
-    }
-  }
-}
-
-
-
-/**
- * Pagination navbar
- */
-.pagination {
-  display: table;
-  margin: 0 auto;
-  list-style-type: none;
-  li {
-    float: left;
-    margin: 0 3px;
-    min-width: 45px;
-    min-height: 45px;
-    text-align: center;
-    a {
-      display: block;
-      text-decoration: none;
-      border: 1px solid $border-color-01;
-      &:hover { border-color: $border-color-02 }
-    }
-    a, div {
-      min-width: 41px;
-      padding: 10px 12px;
-      text-align: center;
-      box-sizing: border-box;
-    }
-    div {
-      border: 1px solid transparent;
-      &.pager-edge {
-        color: $border-color-01;
-        border: 1px dashed;
-      }
-      &.current-page {
-        font-weight: bold;
-      }
-    }
-  }
-}
-
-
-
-/**
- * Task-lists
- */
-
-.task-list {
-  margin-left: 0;
-  padding-left: $spacing-unit * 0.6;
-}
-
-.task-list-item {
-  list-style-type: none;
-  &-checkbox {
-    position: relative;
-    margin-right: $spacing-unit * 0.3;
-    margin-left: -$spacing-unit * 0.5;
-    appearance: none;
-    border: 8px solid $border-color-01;
-    vertical-align: text-top;
-    z-index: -1;
-    &::after {
-      position: absolute;
-      top: -8px;
-      left: -3px;
-      width: 4px;
-      height: 10px;
-      content: "";
-      border: solid transparent;
-      border-width: 0 2px 2px 0;
-      transform: rotate(45deg);
-    }
-    &:checked::after { border-color: $border-color-03 }
-  }
-}
-
-
-
-/**
- * Grid helpers
- */
-@media screen and (min-width: $on-large) {
-  .one-half {
-    width: calc(50% - (#{$spacing-unit} / 2));
-  }
-}
